--- a/src/components/landing/landingPage.css
+++ b/src/components/landing/landingPage.css
@@ -37,3 +37,9 @@
 select:focus {
   outline: none !important;
 }
+
+@media screen and (max-width: 768px) {
+  .footer-custom {
+    margin-bottom: 50px;
+  }
+}
